--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@elysiajs/swagger": "^1.2.0",
     "@mikro-orm/core": "^6.4.5",
     "@mikro-orm/postgresql": "^6.4.5",
+    "axios": "^1.8.2",
     "elysia": "latest",
     "jsonwebtoken": "^9.0.2"
   },
