--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 JWT_SECRET=secretfjsdlkfjasdkldsakljsdkldsfa
 DATABASE_URL=postgresql://topvayne:1@192.168.90.11:5432/canwedo
+YESCALE_API_KEY=sk-GauXxfw3d9CKsCJ4HmWIHG6GQCviUvudJ9qynN6ZneABuOMU
