--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mikro-orm/core": "^6.4.5",
     "@mikro-orm/postgresql": "^6.4.5",
     "axios": "^1.8.2",
+    "bignumber.js": "^9.1.2",
     "elysia": "latest",
     "jsonwebtoken": "^9.0.2"
   },
