--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 JWT_SECRET=secretfjsdlkfjasdkldsakljsdkldsfa
 DATABASE_URL=postgresql://topvayne:1@192.168.90.11:5432/canwedo
 YESCALE_API_KEY=sk-GauXxfw3d9CKsCJ4HmWIHG6GQCviUvudJ9qynN6ZneABuOMU
+
+FCS_WEB3_END_POINT=s3.fcs.ninja
+FCS_WEB3_ACCESS_KEY=2gfOtQQSym2sKmiqi8a1
+FCS_WEB3_SECRET_KEY=e9q4gaDZRuFKqipByes7OS90gfvxpSVntZ9LPB79
+FCS_WEB3_BUCKET_NAME=canwedo
