--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@elysiajs/swagger": "^1.2.0",
     "@mikro-orm/core": "^6.4.5",
     "@mikro-orm/postgresql": "^6.4.5",
+    "@types/minio": "^7.1.1",
     "axios": "^1.8.2",
     "bignumber.js": "^9.1.2",
     "elysia": "latest",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "minio": "^8.0.5"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.8",
